<resources>
    <string name="app_name">文件加密</string>

    <!-- Main Activity -->
    <string name="decrypt">解密</string>
    <string name="encrypt">加密</string>
    <string name="note">秘密记</string>
    <string name="hash">md5计算</string>
    <string name="introduction">功能详解</string>
    <string name="about">关于</string>
    <string name="exitHint">再次点击返回键退出程序</string>

    <!-- Cipher -->
    <string name="typeChoose">点击选择文件</string>
    <string name="srcFile">未选择文件</string>
    <string name="encrypt_method">加密方式: 未识别</string>
    <string name="outFile">点击输入文件名</string>
    <string name="noInput">未选择文件</string>
    <string name="fileExists">输入的文件名已存在</string>
    <string name="begin">开始处理:</string>
    <string name="encryptSuccess">加密成功</string>
    <string name="encryptFailed">加密失败</string>
    <string name="encryptInitFailed">加密算法初始化失败.</string>
    <string name="decryptSuccess">解密成功</string>
    <string name="decryptFailed">解密失败</string>
    <string name="decryptInitFailed">解密算法初始化失败.</string>
    <string name="chooseFile">选择文件</string>
    <string name="noFileManager">未发现文件管理器.</string>
    <string name="encrypt_method_aes">加密方式: AES</string>
    <string name="encrypt_method_des">加密方式: DES</string>
    <string name="encrypt_method_desede">加密方式: DESede</string>
    <string name="encrypt_method_sm4">加密方式: SM4</string>
    <string name="encrypt_method_none">加密方式: 无法识别</string>
    <string name="invalidFile">该文件非该软件加密！</string>
    <string name="encrypting">正在加密...</string>
    <string name="decrypting">正在解密...</string>
    <string name="title_activity_note_login">Sign in</string>
    <string name="chooseCipher">选择加密方式:</string>
    <string name="needDelete"> 成功后删除原文件</string>
    <string name="srcDeleteFailed">原文件删除失败</string>
    <string name="srcDeleteSuccess">原文件删除成功</string>

    <!-- Login -->
    <string name="welcome">欢迎使用秘密记...</string>
    <string name="inputPass">请输入密码！</string>
    <string name="login">进入</string>
    <string name="forget">找回密码</string>
    <string name="recover">初始化</string>
    <string name="error">密码错误</string>
    <string name="dbError">无注册用户。未注册？请反馈</string>
    <string name="noteFirst">第一次使用秘密记，请先注册...</string>
    <string name="setQuestion">设置密码提示问题</string>
    <string name="question1">问题1: </string>
    <string name="question2">问题2: </string>
    <string name="question3">问题3: </string>
    <string name="answer1">答案1: </string>
    <string name="answer2">答案2: </string>
    <string name="answer3">答案3: </string>
    <string name="setPass">设置密码</string>
    <string name="inputPassword">输入密码: </string>
    <string name="inputPassword2">再次确认: </string>
    <string name="newPassword">新密码: </string>
    <string name="register">确认</string>
    <string name="pleaseAnswer">请回答以下问题</string>
    <string name="ensure">确定</string>
    <string name="answerError">回答错误</string>

    <!-- MD5 calculate -->
    <string name="calculate">计算MD5</string>
    <string name="mad5Hint">计算结果点击可复制:</string>
    <string name="calculating">正在计算...</string>
    <string name="copySuccess">复制成功</string>

    <!-- Note -->
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="title">标题</string>
    <string name="content">内容</string>
    <string name="QAinvalid">问答未填写完整！</string>
    <string name="PDinvalid">两次密码输入不一致！</string>
    <string name="noPD1">密码1 未填写！</string>
    <string name="noPD2">密码2 未填写！</string>
    <string name="registerSuccess">注册信息成功</string>
    <string name="passwordError">密码错误</string>
    <string name="getPdSuccess">密码修改成功</string>
    <string name="getPdFailed">密码修改失败</string>
    <string name="noTitle">标题未填写！</string>
    <string name="noContent">内容未填写！</string>
    <string name="saved">保存成功</string>
    <string name="pdLenError">密码长度最短为8，最长为16！</string>
    <string name="setEmail">设置邮箱</string>
    <string name="emailInvalid">邮箱地址不规范</string>
    <string name="inputVerifyCode">请输入6位数验证码：</string>
    <string name="sendEmailHint">验证码将发送到您的注册邮箱</string>
    <string name="sendCodeHint">发送验证码</string>
    <string name="changePassword"><u>使用邮箱验证码更改密码</u></string>
    <string name="backHint">初始化秘密记</string>
    <string name="invalidCode">未输入验证码</string>

    <!-- About -->
    <string name="aboutContent">\t\t该软件提供了包括AES、DES、DESede等常见对称加密算法，并在Android系统下实现了国产SM4分组对称加密算法，支持对文件进行加密解密。加密文件时提供多种算法支持，解密文件时自动识别文件加密方式，并进行解密。\n\t\t除了文件加解密功能，该软件还提供了用户隐私信息保险箱---秘密记，用户可将个人的一些隐私信息记录在里面，输入密码方能查看，用户隐私信息均进行加密后存储于数据库。文件的md5值计算功能，可用于文件校验。</string>
    <string name="school">SWPU</string>
    <string name="author">Xing Duan</string>
    <string name="email">375243742@qq.com</string>

    <!-- Introduction -->
    <string name="intro1title">1. 加密</string>
    <string name="intro2title">2. 解密</string>
    <string name="intro3title">3. 秘密记</string>
    <string name="intro4title">4. md5计算</string>
    <string name="intro1content">\t\t\t\t加密功能，用于对用户文件进行加密。提供了包括AES、DES、DESede等常见对称加密算法，并且支持国产分组对称加密算法SM4，加密文件生成在原始文件同目录下。推荐使用AES加密，加密速度快，且安全性高。</string>
    <string name="intro2content">\t\t\t\t解密功能，用于解密经该软件的加密过的文件。文件解密时，软件会通过文件头读取自动判断文件的加密方式,对识别成功的文件可进行解密,解密文件生成在原始文件同目录下，可选择输入解密生成文件的名字，若不输入，系统自动生成文件名。</string>
    <string name="intro3content">\t\t\t\t秘密记，是给用户存放个人隐私的地方，比如用户的各种账号密码、秘密、重要记事等。在用户第一次使用的时候需要进行个人信息注册，包括密码设置和三个密码提示问答，密码提示问答用于找回密码，所以请务必牢记。用户注册后即可使用秘密记的所有功能了，以后进入秘密记输入设置的密码就可以直接进入，用户的个人信息与秘密信息等全部使用了AES加密然后存储于数据库。</string>
    <string name="intro4content">\t\t\t\tmd5计算功能，应用于文件校验。使用md5计算，为文件生成唯一的"指纹"，通过比较两个文件的md5可判断文件是否一致，是否被篡改过。现在比较多的网站发布文件都会附带发布文件的md5值，用户获取到文件后可对文件进行md5校验，判断文件是否为原版文件。</string>

    <!-- EmailSender -->
    <string name="verifyCodeHint">您此次操作的验证码是： </string>
    <string name="emailTitle">SecretKeeper 验证码</string>
</resources>
