<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_file_encryption"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorAllBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="duanxing.swpu.com.secretkeeper.activity.FileEncryptionActivity">

    <Button
        android:id="@+id/select_file"
        android:text="@string/typeChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/file_path"
        android:focusable="false"
        android:hint="@string/srcFile"
        android:maxLines="1"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/encryptHint"
        android:text="@string/encrypt_method"
        android:textColor="#118A22"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:id="@+id/ckBox_delete"
        android:text="@string/needDelete"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/outFileName"
        android:hint="@string/outFile"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtHint"
        android:text=" 提示:\n 1. 解密文件将生成在选择文件的同目录下\n 2. 如果没输入文件保存名字，软件将自动生成文件名： 时间戳_原始文件名\n"
        android:textColor="#AA0000"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/start_decrypt"
        android:text="@string/decrypt"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
