<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verify_code_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAllBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="duanxing.swpu.com.secretkeeper.activity.VerifyCodeDialogActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true">

        <TextView
            android:text="@string/forget"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/sendEmailHint"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_sendCode"
            android:text="@string/sendCodeHint"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/ed_verifyCode" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/newPassword"
                android:textSize="15sp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp" />

            <EditText
                android:id="@+id/ed_pd1"
                android:background="#FFFFFF"
                android:textAlignment="center"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz012345678_@.,"
                android:inputType="textPassword"
                android:maxLength="16"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:layout_width="0dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/inputPassword2"
                android:textSize="15sp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp" />

            <EditText
                android:id="@+id/ed_pd2"
                android:background="#FFFFFF"
                android:textAlignment="center"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz012345678_@.,"
                android:inputType="textPassword"
                android:maxLength="16"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:layout_width="0dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_ensure"
            android:text="@string/ensure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
