<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_get_back_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAllBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="duanxing.swpu.com.secretkeeper.activity.GetBackPasswordActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/forget"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/pleaseAnswer"
            android:textSize="20sp"
            android:layout_marginBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/question1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:background="@color/colorPrimaryDark"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_height="wrap_content"
                android:layout_width="4sp" />

            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_q1" />
        </LinearLayout>

        <EditText
            android:id="@+id/ed_answer1"
            android:background="#FFFFFF"
            android:layout_marginBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/question2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:background="@color/colorPrimaryDark"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_height="wrap_content"
                android:layout_width="4sp" />

            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_q2" />
        </LinearLayout>

        <EditText
            android:id="@+id/ed_answer2"
            android:background="#FFFFFF"
            android:layout_marginBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/question3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:background="@color/colorPrimaryDark"
                android:layout_marginRight="10sp"
                android:layout_marginLeft="10sp"
                android:layout_height="wrap_content"
                android:layout_width="4sp" />

            <TextView
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_q3" />
        </LinearLayout>

        <EditText
            android:id="@+id/ed_answer3"
            android:background="#FFFFFF"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/newPassword"
                android:textSize="15sp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp" />

            <EditText
                android:id="@+id/ed_pd1"
                android:background="#FFFFFF"
                android:textAlignment="center"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz012345678_@.,"
                android:inputType="textPassword"
                android:maxLength="16"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:layout_width="0dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/inputPassword2"
                android:textSize="15sp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_width="0dp" />

            <EditText
                android:id="@+id/ed_pd2"
                android:background="#FFFFFF"
                android:textAlignment="center"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz012345678_@.,"
                android:inputType="textPassword"
                android:maxLength="16"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:layout_width="0dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_link"
            android:text="@string/changePassword"
            android:gravity="center"
            android:autoLink="all"
            android:textAlignment="textEnd"
            android:layout_marginTop="30sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10sp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="#FF0000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_hint" />

        <Button
            android:text="@string/ensure"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ensure" />

    </LinearLayout>
</RelativeLayout>
